[package]
authors = ["Pollen Robotics <contact@pollen-robotics.com>"]
license = "LGPL-3.0"
name = "robus"
version = "0.2.0"

[profile.dev]
codegen-units = 1
incremental = false
[profile.release]
lto = true

[dependencies]
embedded-hal = "0.1.2"

[target."cfg(not(target_arch = \"arm\"))".dev-dependencies]
rand = "0.4.2"

[target."cfg(target_arch = \"arm\")".dev-dependencies]
cortex-m = "0.4.3"
cortex-m-rt = "0.3.12"
nb = "0.1.1"
[target."cfg(target_arch = \"arm\")".dev-dependencies.stm32f0_hal]
git = "https://github.com/pollen-robotics/stm32f0"
branch = "hal-2.0"
features = ["use_alloc"]
