[package]
authors = ["Pollen Robotics <contact@pollen-robotics.com>"]
name = "robus"
publish = false
version = "1.0.0"
license = "LGPL-3.0"

[dependencies.clippy]
optional = true
version = "*"

[profile.dev]
opt-level = 0
debug = true
codegen-units = 1
[profile.release]
opt-level = 3
debug = false
codegen-units = 1

[target.'cfg(not(target_arch = "arm"))'.dependencies.mockup_hal]
git = "https://github.com/pollen-robotics/stm32-mockup-hal"
rev = "e284eb6ad37c4770a3f2cbb373f289966b503f5f"
[target."cfg(not(target_arch = \"arm\"))".dev-dependencies]
rand = "0.3.18"

[target."cfg(target_arch = \"arm\")".dependencies]
cortex-m = "=0.3.1"
[target."cfg(target_arch = \"arm\")".dependencies.stm32f0_hal]
git = "https://github.com/pollen-robotics/stm32f0"
tag = "1.0.0"
features = ["use_alloc"]
[target."cfg(target_arch = \"arm\")".dev-dependencies]
cortex-m-rt = "=0.3.7"
[target."cfg(target_arch = \"arm\")".dependencies.stm32f0x2]
git = "https://github.com/pollen-robotics/stm32f0"
tag = "1.0.0"
